# devops_workshop

./: .gitignore  Dockerfile_face_analytics  Dockerfile_webapp  Jenkinsfile  README.md  build-for-docker-compose.sh  docker-compose.yml
dev/: Dockerfile.dev  Dockerfile.jenkins  ssh_key_dev  ssh_key_dev.pub
facedetection_va/: CMakeLists.txt  DB.cpp  DB.h  FaceDetectionService.cpp  FaceDetectionService.h  Makefile  facedetector  facedetector.cpp
facedetection_va/googletest/: CMakeLists.txt
facedetection_va/googletest/googlemock/: CMakeLists.txt
facedetection_va/googletest/googletest/: CMakeLists.txt
facedetection_va/test/: CMakeLists.txt  TestFaceDetectionService.cpp
facedetection_va/webcc/: config.h
facedetection_webapp/: Gemfile  package.json
facedetection_webapp/app/assets/stylesheets/: faces.scss  fimage64s.scss  live.scss
facedetection_webapp/app/controllers/: faces_controller.rb  fimage64s_controller.rb  images_controller.rb  live_controller.rb
facedetection_webapp/app/helpers/: faces_helper.rb  fimage64s_helper.rb
facedetection_webapp/app/models/: face.rb  fimage64.rb  image.rb
facedetection_webapp/app/views/faces/: _face.json.jbuilder  _form.html.erb  edit.html.erb  index.html.erb  index.json.jbuilder  live.html.erb  new.html.erb  show.html.erb
facedetection_webapp/app/views/fimage64s/: _fimage64.json.jbuilder  _form.html.erb  edit.html.erb  index.html.erb  index.json.jbuilder  new.html.erb  show.html.erb  show.json.jbuilder
facedetection_webapp/app/views/images/: _form.html.erb  _image.json.jbuilder  index.html.erb  show.html.erb
facedetection_webapp/app/views/layouts/: application.html.erb
facedetection_webapp/app/views/live/: create.html.erb  new.html.erb
facedetection_webapp/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  master.key  routes.rb  secrets.yml
facedetection_webapp/config/environments/: production.rb
facedetection_webapp/coverage/: .last_run.json  .resultset.json  index.html
facedetection_webapp/db/: schema.rb
facedetection_webapp/db/migrate/: 20180803040414_create_faces.rb  20180819180513_create_fimage64s.rb  20190505080657_add_cropped_face_info_to_f_image64s.rb  20190508120605_create_images.rb
facedetection_webapp/features/: images.feature
facedetection_webapp/features/step_definitions/: images.rb
facedetection_webapp/public/assets/: .sprockets-manifest-02b4450ea5fe5efeb10d897d30822587.json  application-61b49b9d722c087b2e2f109f0460847b42f654f1c8c4f601bd33e3136ab226d7.js
facedetection_webapp/storage/5b/hv/: 5bhvMPQLxZv7swJaoJYMVDdS
facedetection_webapp/storage/6j/QS/: 6jQSaFk6UC72B8yQH8CDYZna
facedetection_webapp/test/: test_helper.rb
facedetection_webapp/test/controllers/: faces_controller_test.rb  fimage64s_controller_test.rb  images_controller_test.rb  live_controller_test.rb  pets_controller_test.rb
facedetection_webapp/test/fixtures/: faces.yml  fimage64s.yml  images.yml
facedetection_webapp/test/models/: fimage64_test.rb  image_test.rb
facedetection_webapp/test/system/: faces_test.rb  fimage64s_test.rb  images_test.rb
facedetection_webapp/tmp/: development_secret.txt
facedetection_webapp/tmp/cache/: bootsnap-load-path-cache
scripts/: build-and-run.sh  build.sh  run-dev.sh  smoketest-dev.sh  smoketest.json  test-ci.sh  test-va.sh  test.sh
(+2686 files in other folders)
